--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -18,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-i18next": "^12.1.1",
     "react-icons": "^4.7.1",
+    "react-map-gl": "^7.0.21",
     "react-markdown": "^8.0.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
