--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
     "i18next": "^22.4.8",
     "jspdf": "^2.5.1",
+    "mapbox-gl": "^2.13.0",
     "postcss-cli": "^10.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^2.7.0",
