--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "i18next": "^22.4.8",
     "jspdf": "^2.5.1",
     "mapbox-gl": "^2.13.0",
+    "mapbox-gl-geocoder": "^2.0.1",
     "postcss-cli": "^10.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^2.7.0",
